--- a/src/container-apps/WebApp/appsettings.json
+++ b/src/container-apps/WebApp/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "WebApiUrl": "https://datasync-aca-api.internal.proudmeadow-430e00ae.westeurope.azurecontainerapps.io/webapi/api/WeatherForecast"
 }
