--- a/src/container-apps/WebApp/appsettings.Development.json
+++ b/src/container-apps/WebApp/appsettings.Development.json
@@ -7,5 +7,7 @@
     }
   },
 
-  "WebApiUrl": "https://localhost:5200/api/WeatherForecast"
+  //"WebApiUrl": "https://localhost:5200/api/WeatherForecast",
+
+  "WebApiUrl": "https://datasync-aca-api.internal.proudmeadow-430e00ae.westeurope.azurecontainerapps.io/webapi/api/WeatherForecast"
 }
