--- a/src/WeatherForecastApp/WeatherForecast.WebApi/WeatherForecast.WebApi.csproj
+++ b/src/WeatherForecastApp/WeatherForecast.WebApi/WeatherForecast.WebApi.csproj
@@ -11,11 +11,12 @@
 
   <ItemGroup>
  
-	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
- 
+	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1-Preview.1" />
 
+
+	  <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
  
-	  <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
 
   </ItemGroup>
 
