--- a/src/WeatherForecastApp/WeatherForecast.WebApi/appsettings.Development.json
+++ b/src/WeatherForecastApp/WeatherForecast.WebApi/appsettings.Development.json
@@ -10,5 +10,6 @@
   "ConnectionStrings": {
     "DbConnection": "Server=DATASYNCHRO-PRE;Database=WeatherForecastDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
     // "DbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WeatherForecastDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
-  }
+  },
+  "APPLICATIONINSIGHTS_CONNECTION_STRING": "InstrumentationKey=206cd7fd-9c33-4c25-b317-556cf721c200;IngestionEndpoint=https://francecentral-1.in.applicationinsights.azure.com/;LiveEndpoint=https://francecentral.livediagnostics.monitor.azure.com/;ApplicationId=4d50d858-7f8a-482d-953b-7e090a1beada"
 }
