--- a/src/WeatherForecastApp/WeatherForecast.WebApp/WeatherForecast.WebApp.csproj
+++ b/src/WeatherForecastApp/WeatherForecast.WebApp/WeatherForecast.WebApp.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
+	  <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
   </ItemGroup>
 
 </Project>
