--- a/src/WeatherForecastApp/WeatherForecast.WebApp/appsettings.Development.json
+++ b/src/WeatherForecastApp/WeatherForecast.WebApp/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
 
+  "APPLICATIONINSIGHTS_CONNECTION_STRING": "InstrumentationKey=206cd7fd-9c33-4c25-b317-556cf721c200;IngestionEndpoint=https://francecentral-1.in.applicationinsights.azure.com/;LiveEndpoint=https://francecentral.livediagnostics.monitor.azure.com/;ApplicationId=4d50d858-7f8a-482d-953b-7e090a1beada",
   "WEBAPI_URL": "https://localhost:7058"
- 
+
 }
